# ml-labs

./: 404.html  CHANGELOG.md  CLAUDE.md  Concept.md  LICENSE  README.md  TODO.md  design.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  test.yml
concepts/: index.html
concepts/architecture/: index.html
concepts/data-flow/: index.html
concepts/pipeline/: index.html
concepts/state-model/: index.html
docs/: index.md
docs/concepts/: architecture.md  data-flow.md  index.md  pipeline.md  state-model.md
docs/guide/: adapters-processors.md  adapters.md  nn.md  pipeline-experimenter.md  processors.md  trainer-collectors.md
docs/reference/: adapters.md  collectors.md  connector.md  experimenter.md  filters.md  index.md  inferencer.md  nn.md  pipeline.md  processors.md  trainer.md
docs/serving/: inferencer.md
examples/kaggle_s6e2/: 0.Prepare.ipynb  Heart.ipynb
examples/kaggle_s6e3/: 1.preparation.ipynb  2.exploration.ipynb  3-2.exp_ss1_2.ipynb  3-2.exp_ss1_aug.ipynb  3-3.exp_ss1_2.ipynb  3.exp_ss1.ipynb  4-2.exp_skf5.ipynb  4-2.exp_skf5_aug.ipynb  4-3.exp_skf5_2.ipynb  4.exp_skf5.ipynb  5.cv_agg.ipynb  step1.ipynb
examples/kaggle_s6e4/: 1.preparation.ipynb  2.exploration.ipynb  3.feature engineering.ipynb  4.modeling.ipynb
examples/kaggle_s6e5/: 1.preparation.ipynb  2.feature_engineering.ipynb  3.modeling.ipynb
guide/adapters/: index.html
guide/nn/: index.html
guide/pipeline-experimenter/: index.html
guide/processors/: index.html
guide/trainer-collectors/: index.html
ml_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mllab/: __init__.py  _data_wrapper.py  _experimenter.py  _expobj.py  _node_processor.py  _pipeline.py  _trainer.py  _trainobj.py
mllab/.ipynb_checkpoints/: _data_wrapper-checkpoint.py  _experimenter-checkpoint.py  _metric-checkpoint.py
mllab/adapter/: _base.py  (+3 more)
mllabs/: __init__.py  _cache.py  _connector.py  _data_wrapper.py  _describer.py  _executor.py  _experimenter.py  _expobj.py  _flow.py  _inferencer.py  _logger.py  _metric.py  _node_processor.py  _pipeline.py  _serialize.py  _store.py  _tracker.py  _trainer.py  _trainobj.py  col.py
reference/: index.html
search/: search_index.json
tests/: test_adapter_lightgbm.py  test_collector.py  test_experimenter.py  test_inferencer.py  test_nn.py  test_node_processor.py  test_pipeline.py  test_processor.py  test_sampler.py  test_serialize.py  test_trainer.py
(+62 files in other folders)
