[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-labs"
version = "0.4.0"
requires-python = ">=3.10"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "cachetools>=5.0",
]

[project.optional-dependencies]
xgboost = ["xgboost>=1.7"]
lightgbm = ["lightgbm>=3.3"]
catboost = ["catboost>=1.1"]
shap = ["shap>=0.42"]
polars = ["polars>=0.19"]
all = ["xgboost>=1.7", "lightgbm>=3.3", "catboost>=1.1", "shap>=0.42", "polars>=0.19"]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mllab*"]
